temp/objects/Car_Service__c.object
<CustomObject>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Total_Maintenances__c</fullName>
        <description>The total number of Maintenance records</description>
        <label>Total Maintenances</label>
        <summaryForeignKey>Maintenance__c.Car_Service__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Car Services</relationshipLabel>
        <relationshipName>Car_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Car Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>